--- a/nacos-config/src/main/resources/bootstrap.yml
+++ b/nacos-config/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 # bootstrap.yml 可以理解成系统级别的一些参数配置, 优先加载, nacos必须放在这里才可加载到
 # application.yml 可以用来定义应用级别
 spring:
+  application:
+    name: nacos-config
   cloud:
     nacos:
       username: nacos
