--- a/nacos-config/src/main/resources/bootstrap.properties
+++ b/nacos-config/src/main/resources/bootstrap.properties
@@ -3,10 +3,8 @@ spring.cloud.nacos.server-addr=115.159.66.110:8848
 spring.cloud.nacos.username=nacos
 spring.cloud.nacos.password=nacos
 
-#命名空间配置隔离
+#命名空间ID 可配置隔离环境
 spring.cloud.nacos.config.namespace=test
-#暂时没用
-spring.profiles.active=dev
 # 添加多个配置文件, 共享配置 redis.properties 为nacos配置的文件名, dataID必须加properties后缀
 spring.cloud.nacos.config.shared-configs[0].data-id=redis.properties
 spring.cloud.nacos.config.shared-configs[0].group=DEFAULT_GROUP
