--- a/nacos-service/src/main/resources/bootstrap.yml
+++ b/nacos-service/src/main/resources/bootstrap.yml
@@ -6,3 +6,8 @@ spring:
       username: nacos
       password: nacos
       server-addr: 115.159.66.110:8848
+
+# nacos配置禁用打印心跳日志
+logging:
+  level:
+    com.alibaba.nacos.client.*: WARN
